# Compiler

./: .clang-format  .gitignore  CMakeLists.txt  CPSL.lex  Questions.txt  README.md  lex.yy.c  main.cpp  parser.y  runAll.sh  runTest.sh  scanner.l  todo.txt
FLEX/hex/: hex.lex  hex.txt  lex.yy.c
MIPS/: ArraySum.asm
scripts/: cnr.sh  compile.sh  compileDir.sh  runTest.sh
src/: AddNode.cpp  AddNode.hpp  AndNode.cpp  AndNode.hpp  AssignmentStatementNode.cpp  AssignmentStatementNode.hpp  BodyNode.cpp  BooleanConstantNode.cpp  BooleanConstantNode.hpp  BooleanLiteralNode.cpp  BooleanLiteralNode.hpp  CharacterConstantNode.cpp  CharacterConstantNode.hpp  CharacterExpressionNode.cpp  CharacterExpressionNode.hpp  CharacterLiteralNode.cpp  CharacterLiteralNode.hpp  ConstantDeclarationNode.cpp  ConstantDeclarationNode.hpp  DivideNode.cpp  DivideNode.hpp  EqualExpressionNode.cpp  EqualExpressionNode.hpp  ExpressionNode.cpp  ExpressionNode.hpp  Factory.hpp  ForStatementNode.cpp  ForStatementNode.hpp  FormalParameter.cpp  FormalParameter.hpp  FunctionCallNode.cpp  FunctionCallNode.hpp  FunctionDeclarationNode.cpp  FunctionDeclarationNode.hpp  GreaterThanEqualNode.cpp  GreaterThanEqualNode.hpp  GreaterThanNode.cpp  GreaterThanNode.hpp  IdentifierNode.cpp  IdentifierNode.hpp  (+76 more)
src/log/: easylogging++.cc  easylogging++.h
test/function/: array_sum.cpsl
test/simple_expressions/: assignment.cpsl  short_exprs.cpsl
test/udt/: array.cpsl  array_char.cpsl  record.cpsl  record_decl.cpsl
